cros: Remove unnecessary dcheck

Removing a dcheck I added after it was not useful.

Bug: 914961
Change-Id: Ib72853ec17880611936cf5e64e2d868d0a7cff96
Reviewed-on: https://chromium-review.googlesource.com/c/1407268
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622529}
Former-commit-id: e22d84179edf3bb043f7f39995877596587ec4e6